demo-http-apps/demo-gw-http-route-multiple-1-2.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: my-http-app-v1-v2
spec:
  parentRefs:
    - name: gw-single-listener
  hostnames:
    - "gw-migration.mydomain.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: svc-v1
          port: 80
          weight: 90
        - name: svc-v2
          port: 80
          weight: 10
